tests/src/frontend/visibility/invalid/module_protected_class.sk
module M;

protected class Foo
